--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Creating and Inserting DOM Elements</title>
-  </head>
-  <script type="application/javascript">
-  </script>
-  <body>
-    <main id="main"></main>
-    <script type="text/javascript" src="index.js"></script>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DOM Testing</title>
+    <script defer src="index.js"></script>
+</head>
+<body>
+    <main id="main">This is the main content.</main>
+</body>
 </html>
